Fixed header's z-index

--- a/lab5/lab/cinema/style.css
+++ b/lab5/lab/cinema/style.css
@@ -20,7 +20,7 @@ header {
     align-items: center;
     margin: 0;
     padding: 0;
-    z-index: 1;
+    z-index: 2;
     flex-wrap: wrap;
 }
 
